--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   /* Firebase */
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
   import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js";
-  import { getFirestore, doc, setDoc, getDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore.js";
+  import { getFirestore, doc, setDoc, getDoc, serverTimestamp, updateDoc, arrayUnion } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore.js";
 
   const firebaseConfig = {
     apiKey: "AIzaSyDM4bGzvdMlNyr7GCTbHLEo96UJFTCYN4Y",
@@ -135,38 +135,54 @@
     return cred.user;
   }
 
-  async function registerOrLogin(){
-    const name = nameSelect.value;
-    const pw   = passEl.value.trim();
-    if(!name) return toast('Kies je naam.');
-    if(!pw)   return toast('Voer je wachtwoord in.');
-    if(!PARTICIPANTS.includes(name)) return toast('Onbekende naam.');
+async function registerOrLogin(){
+  const name = nameSelect.value;
+  const pw   = passEl.value.trim();
+  if(!name) return toast('Kies je naam.');
+  if(!pw)   return toast('Voer je wachtwoord in.');
+  if(!PARTICIPANTS.includes(name)) return toast('Onbekende naam.');
 
-    await ensureAnon();
-    const pRef = doc(db,'events',EVENT_ID,'participants',name);
-    const snap = await getDoc(pRef);
+  await ensureAnon();
+  const pRef = doc(db,'events',EVENT_ID,'participants',name);
+  const snap = await getDoc(pRef);
 
-    if(modeEl.value === 'register'){
-      if(snap.exists()) return toast('Naam bestaat al. Kies Inloggen.');
-      const salt=randSalt(); const hash=await hashPass(pw, salt);
-      await setDoc(pRef, {
-        name, pass_salt:salt, pass_hash:hash,
-        owner_uid: auth.currentUser.uid,
-        createdAt: serverTimestamp(),
-        hasLoggedIn: true, lastLoginAt: serverTimestamp()
-      });
-    }else{
-      if(!snap.exists()) return toast('Naam nog niet geregistreerd. Kies Nieuw aanmaken.');
-      const data=snap.data(); const hash=await hashPass(pw, data.pass_salt);
-      if(hash !== data.pass_hash) return toast('Onjuist wachtwoord.');
-      await setDoc(pRef, { hasLoggedIn:true, lastLoginAt: serverTimestamp() }, { merge:true });
-    }
+  if(modeEl.value === 'register'){
+    // ----- A) REGISTREREN -----
+    if(snap.exists()) return toast('Naam bestaat al. Kies Inloggen.');
+    const salt = randSalt();
+    const hash = await hashPass(pw, salt);
 
-    // Bewaar gekozen naam lokaal voor app.html
-    localStorage.setItem('sinty_currentName', name);
+    await setDoc(pRef, {
+      name,
+      pass_salt: salt,
+      pass_hash: hash,
+      owner_uid: auth.currentUser.uid,
+      createdAt: serverTimestamp(),
+      hasLoggedIn: true,
+      lastLoginAt: serverTimestamp()
+    });
 
-    // Door naar de app
-    window.location.href = 'app.html';
+    await updateDoc(pRef, { allowed_uids: arrayUnion(auth.currentUser.uid) });
+
+  } else {
+    // ----- B) INLOGGEN -----
+    if(!snap.exists()) return toast('Naam nog niet geregistreerd. Kies Nieuw aanmaken.');
+    const data = snap.data();
+    const hash = await hashPass(pw, data.pass_salt);
+    if(hash !== data.pass_hash) return toast('Onjuist wachtwoord.');
+
+    await setDoc(pRef, {
+      hasLoggedIn: true,
+      lastLoginAt: serverTimestamp()
+    }, { merge: true });
+
+    await updateDoc(pRef, { allowed_uids: arrayUnion(auth.currentUser.uid) });
+  }
+
+  // Bewaar gekozen naam voor app.html en ga verder
+  localStorage.setItem('sinty_currentName', name);
+  window.location.href = 'app.html';
+}
   }
 
   goBtn.addEventListener('click', registerOrLogin);
