--- a/app.html
+++ b/app.html
@@ -33,7 +33,7 @@
 <body>
 <div class="wrap">
   <div class="card">
-    <h1>🎅 Sinterlootjes</h1>
+    <h1>Sinterlootjes</h1>
     <p class="lead">Je bent ingelogd. Bekijk jouw lootje (na 1× inloggen door iedereen) en vul verlanglijstjes in.</p>
     <div class="controls">
       <span class="pill" id="loginStatus">Controleren…</span>
