--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 <div class="wrap">
   <div class="card">
-    <h1>🎅 Sinterlootjes</h1>
+    <h1>Sinterlootjes</h1>
     <p class="lead">Log in of maak je account aan. Daarna ga je door naar de lootjes & verlanglijstjes.</p>
     <span class="pill" id="loginStatus">Niet ingelogd</span>
   </div>
