--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 <div class="wrap">
   <div class="card">
-    <h1>Sinterlootjes</h1>
+    <h1>🎅 Sinterlootjes</h1>
     <p class="lead">Log in of maak je account aan. Daarna ga je door naar de lootjes & verlanglijstjes.</p>
     <span class="pill" id="loginStatus">Niet ingelogd</span>
   </div>
@@ -135,54 +135,38 @@
     return cred.user;
   }
 
-async function registerOrLogin(){
-  const name = nameSelect.value;
-  const pw   = passEl.value.trim();
-  if(!name) return toast('Kies je naam.');
-  if(!pw)   return toast('Voer je wachtwoord in.');
-  if(!PARTICIPANTS.includes(name)) return toast('Onbekende naam.');
+  async function registerOrLogin(){
+    const name = nameSelect.value;
+    const pw   = passEl.value.trim();
+    if(!name) return toast('Kies je naam.');
+    if(!pw)   return toast('Voer je wachtwoord in.');
+    if(!PARTICIPANTS.includes(name)) return toast('Onbekende naam.');
 
-  await ensureAnon();
-  const pRef = doc(db,'events',EVENT_ID,'participants',name);
-  const snap = await getDoc(pRef);
+    await ensureAnon();
+    const pRef = doc(db,'events',EVENT_ID,'participants',name);
+    const snap = await getDoc(pRef);
 
-  if(modeEl.value === 'register'){
-    // ----- A) REGISTREREN -----
-    if(snap.exists()) return toast('Naam bestaat al. Kies Inloggen.');
-    const salt = randSalt();
-    const hash = await hashPass(pw, salt);
+    if(modeEl.value === 'register'){
+      if(snap.exists()) return toast('Naam bestaat al. Kies Inloggen.');
+      const salt=randSalt(); const hash=await hashPass(pw, salt);
+      await setDoc(pRef, {
+        name, pass_salt:salt, pass_hash:hash,
+        owner_uid: auth.currentUser.uid,
+        createdAt: serverTimestamp(),
+        hasLoggedIn: true, lastLoginAt: serverTimestamp(),
+        allowed_uids: [auth.currentUser.uid]
+      });
+    }else{
+      if(!snap.exists()) return toast('Naam nog niet geregistreerd. Kies Nieuw aanmaken.');
+      const data=snap.data(); const hash=await hashPass(pw, data.pass_salt);
+      if(hash !== data.pass_hash) return toast('Onjuist wachtwoord.');
+      await setDoc(pRef, { hasLoggedIn:true, lastLoginAt: serverTimestamp() }, { merge:true });
+      // voeg dit device toe aan allowed_uids
+      await updateDoc(pRef, { allowed_uids: arrayUnion(auth.currentUser.uid) });
+    }
 
-    await setDoc(pRef, {
-      name,
-      pass_salt: salt,
-      pass_hash: hash,
-      owner_uid: auth.currentUser.uid,
-      createdAt: serverTimestamp(),
-      hasLoggedIn: true,
-      lastLoginAt: serverTimestamp()
-    });
-
-    await updateDoc(pRef, { allowed_uids: arrayUnion(auth.currentUser.uid) });
-
-  } else {
-    // ----- B) INLOGGEN -----
-    if(!snap.exists()) return toast('Naam nog niet geregistreerd. Kies Nieuw aanmaken.');
-    const data = snap.data();
-    const hash = await hashPass(pw, data.pass_salt);
-    if(hash !== data.pass_hash) return toast('Onjuist wachtwoord.');
-
-    await setDoc(pRef, {
-      hasLoggedIn: true,
-      lastLoginAt: serverTimestamp()
-    }, { merge: true });
-
-    await updateDoc(pRef, { allowed_uids: arrayUnion(auth.currentUser.uid) });
-  }
-
-  // Bewaar gekozen naam voor app.html en ga verder
-  localStorage.setItem('sinty_currentName', name);
-  window.location.href = 'app.html';
-}
+    localStorage.setItem('sinty_currentName', name);
+    window.location.href = 'app.html';
   }
 
   goBtn.addEventListener('click', registerOrLogin);
