--- a/index.html
+++ b/index.html
@@ -18,12 +18,152 @@
   .row{display:grid;grid-template-columns:1fr 1fr;gap:12px} @media (max-width:720px){.row{grid-template-columns:1fr}}
   .controls{display:flex;gap:8px;flex-wrap:wrap;margin-top:10px}
   button{border:none;cursor:pointer;padding:10px 12px;border-radius:10px;font-weight:650;box-shadow:0 2px 0 rgba(0,0,0,.07)}
-  .btn{background:var(--brand);color:#fff}
+  .btn{background:var(--brand);color:#fff} .pill{display:inline-flex;align-items:center;gap:6px;border:1px solid #fde68a;color:#92400e;border-radius:999px;padding:6px 10px;font-size:12.5px;background:#fff}
+  .footnote{margin-top:8px;font-size:12px;color:#9aa3b2}
 </style>
 </head>
 <body>
 <div class="wrap">
-  <div class="card"><h1>Sinterlootjes — Placeholder</h1><p>Deze index.html is als downloadplaceholder gemaakt. Plak straks de volledige werkende versie die we samen opstellen.</p></div>
+  <div class="card">
+    <h1>🎅 Sinterlootjes</h1>
+    <p class="lead">Log in of maak je account aan. Daarna ga je door naar de lootjes & verlanglijstjes.</p>
+    <span class="pill" id="loginStatus">Niet ingelogd</span>
+  </div>
+
+  <div class="card">
+    <h2>Inloggen / Registreren</h2>
+    <div class="row">
+      <div>
+        <label>Naam (uit lijst)</label>
+        <select id="nameSelect"></select>
+      </div>
+      <div>
+        <label>Wachtwoord</label>
+        <input id="password" type="password" placeholder="Kies of vul je wachtwoord">
+      </div>
+    </div>
+    <div class="row">
+      <div>
+        <label>Actie</label>
+        <select id="mode">
+          <option value="login">Inloggen (bestaat al)</option>
+          <option value="register">Nieuw aanmaken</option>
+        </select>
+      </div>
+      <div class="controls" style="align-items:end">
+        <button class="btn" id="go">Verder</button>
+      </div>
+    </div>
+    <div class="footnote" id="fixedInfo"></div>
+  </div>
+
+  <div class="footnote">Tip: Bewaar je wachtwoord; je hebt het later weer nodig.</div>
 </div>
+
+<!-- Dropdown vuller (zonder Firebase) -->
+<script>
+  window.addEventListener('DOMContentLoaded', function () {
+    const sel = document.getElementById('nameSelect');
+    if (!sel) return;
+    const names = ['Dieta','Robert','Saskia S','Saskia H','Mark','Joshua','Jerome','Denise','Zoë'];
+    sel.innerHTML = '';
+    const ph = document.createElement('option');
+    ph.value = ''; ph.textContent = '— Kies je naam —'; ph.disabled = true; ph.selected = true;
+    sel.appendChild(ph);
+    names.slice().sort((a,b)=>a.localeCompare(b,'nl',{sensitivity:'base'}))
+      .forEach(n => { const opt=document.createElement('option'); opt.value=n; opt.textContent=n; sel.appendChild(opt); });
+  });
+</script>
+
+<!-- App (Firebase + login) -->
+<script type="module">
+  /* Vaste instellingen */
+  const EVENT_ID = 'sinty-2025';
+  const TREKCODE = 'hausverlorenenbewilderd';
+  const PARTICIPANTS = ['Dieta','Robert','Saskia S','Saskia H','Mark','Joshua','Jerome','Denise','Zoë'];
+  document.getElementById('fixedInfo').textContent = `Event-ID: ${EVENT_ID} · Trekcode: ${TREKCODE}`;
+
+  /* Firebase */
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
+  import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js";
+  import { getFirestore, doc, setDoc, getDoc, serverTimestamp, updateDoc, arrayUnion } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyDM4bGzvdMlNyr7GCTbHLEo96UJFTCYN4Y",
+    authDomain: "sinterklaas-c9f01.firebaseapp.com",
+    projectId: "sinterklaas-c9f01",
+    storageBucket: "sinterklaas-c9f01.firebasestorage.app",
+    messagingSenderId: "305941838481",
+    appId: "1:305941838481:web:c5bde196d9cdda6dad5d30",
+    measurementId: "G-N4Q2C0RQNK"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const db   = getFirestore(app);
+
+  /* Helpers */
+  const $enc = new TextEncoder();
+  async function hashPass(pw, salt){
+    const key  = await crypto.subtle.importKey('raw', $enc.encode(pw), {name:'PBKDF2'}, false, ['deriveBits']);
+    const bits = await crypto.subtle.deriveBits({name:'PBKDF2', hash:'SHA-256', salt:$enc.encode(salt), iterations:120000}, key, 256);
+    return [...new Uint8Array(bits)].map(b=>b.toString(16).padStart(2,'0')).join('');
+  }
+  const randSalt = () => Math.random().toString(36).slice(2)+Math.random().toString(36).slice(2);
+  const toast = m => alert(m);
+
+  /* UI refs */
+  const nameSelect = document.getElementById('nameSelect');
+  const passEl     = document.getElementById('password');
+  const modeEl     = document.getElementById('mode');
+  const goBtn      = document.getElementById('go');
+  const loginStatus= document.getElementById('loginStatus');
+
+  onAuthStateChanged(auth, (u)=> {
+    loginStatus.textContent = u ? `Sessie actief — uid ${u.uid.slice(0,6)}…` : 'Niet ingelogd';
+  });
+
+  async function ensureAnon(){
+    if(auth.currentUser) return auth.currentUser;
+    const cred = await signInAnonymously(auth);
+    return cred.user;
+  }
+
+  async function registerOrLogin(){
+    const name = nameSelect.value;
+    const pw   = passEl.value.trim();
+    if(!name) return toast('Kies je naam.');
+    if(!pw)   return toast('Voer je wachtwoord in.');
+    if(!PARTICIPANTS.includes(name)) return toast('Onbekende naam.');
+
+    await ensureAnon();
+    const pRef = doc(db,'events',EVENT_ID,'participants',name);
+    const snap = await getDoc(pRef);
+
+    if(modeEl.value === 'register'){
+      if(snap.exists()) return toast('Naam bestaat al. Kies Inloggen.');
+      const salt=randSalt(); const hash=await hashPass(pw, salt);
+      await setDoc(pRef, {
+        name, pass_salt:salt, pass_hash:hash,
+        owner_uid: auth.currentUser.uid,
+        createdAt: serverTimestamp(),
+        hasLoggedIn: true, lastLoginAt: serverTimestamp(),
+        allowed_uids: [auth.currentUser.uid]
+      });
+    }else{
+      if(!snap.exists()) return toast('Naam nog niet geregistreerd. Kies Nieuw aanmaken.');
+      const data=snap.data(); const hash=await hashPass(pw, data.pass_salt);
+      if(hash !== data.pass_hash) return toast('Onjuist wachtwoord.');
+      await setDoc(pRef, { hasLoggedIn:true, lastLoginAt: serverTimestamp() }, { merge:true });
+      // zorg dat dit apparaat ook rechten heeft
+      await updateDoc(pRef, { allowed_uids: arrayUnion(auth.currentUser.uid) });
+    }
+
+    localStorage.setItem('sinty_currentName', name);
+    window.location.href = 'app.html';
+  }
+
+  goBtn.addEventListener('click', registerOrLogin);
+</script>
 </body>
 </html>
