--- a/app.html
+++ b/app.html
@@ -1,2 +1,277 @@
 <!doctype html>
-<html lang="nl"><head><meta charset="utf-8" /><meta name="viewport" content="width=device-width,initial-scale=1" /><title>Sinterlootjes — App</title></head><body><h1>Placeholder app.html</h1><p>Deze file toont alleen dat de download werkt. Straks vervangen we dit door de echte code.</p></body></html>
+<html lang="nl">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Sinterlootjes — App</title>
+<meta name="color-scheme" content="light">
+<style>
+  * { box-sizing: border-box; margin:0; padding:0; }
+  :root{--bg:#fff7ee;--card:#fff;--text:#1f2937;--muted:#64748b;--brand:#ef4444;--border:#e5e7eb}
+  body{margin:0;font-family:ui-rounded,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Emoji",sans-serif;background:var(--bg);color:var(--text)}
+  .wrap{max-width:1000px;margin:24px auto;padding:16px}
+  .card{background:var(--card);border:1px solid var(--border);border-radius:16px;padding:16px;box-shadow:0 6px 18px rgba(15,23,42,.06);margin-bottom:14px}
+  h1{margin:0 0 8px;font-size:24px} .lead{color:var(--muted);margin:0 0 8px}
+  label{font-size:13px;font-weight:650;display:block;margin:10px 0 6px}
+  input,textarea,button{font:inherit}
+  input[type="text"],textarea{width:100%;padding:10px;border:1px solid var(--border);border-radius:10px;background:#fff}
+  textarea{min-height:88px}
+  .controls{display:flex;gap:8px;flex-wrap:wrap;margin-top:10px}
+  button{border:none;cursor:pointer;padding:10px 12px;border-radius:10px;font-weight:650;box-shadow:0 2px 0 rgba(0,0,0,.07)}
+  .btn{background:var(--brand);color:#fff} .btn-alt{background:#fff;border:1px solid var(--border)}
+  .muted{color:var(--muted)} .hidden{display:none}
+  .pill{display:inline-flex;align-items:center;gap:6px;border:1px solid #fde68a;color:#92400e;border-radius:999px;padding:6px 10px;font-size:12.5px;background:#fff}
+  .badge{display:inline-flex;align-items:center;gap:6px;border:1px solid #ffe4e6;color:#9f1239;border-radius:999px;padding:6px 10px;font-size:12.5px;background:#fff}
+  .inline-result{display:inline-block;margin-top:10px;border:1px dashed #e5e7eb;border-radius:10px;padding:10px;background:linear-gradient(135deg,#fff,#fff9f1)}
+  .item{display:flex;gap:10px;align-items:center;justify-content:space-between;border:1px dashed #e5e7eb;border-radius:10px;padding:10px;margin:6px 0;background:linear-gradient(135deg,#fff,#fff9f1)}
+  .col{display:flex;flex-direction:column;gap:6px}
+  a.inline{color:#0b3b84;text-decoration:none}
+  .footnote{margin-top:8px;font-size:12px;color:#9aa3b2}
+  .progress{font-size:12.5px;color:#92400e;border:1px solid #fde68a;background:#fff;border-radius:999px;padding:6px 10px;display:inline-block}
+</style>
+</head>
+<body>
+<div class="wrap">
+  <div class="card">
+    <h1>🎅 Sinterlootjes</h1>
+    <p class="lead">Je bent ingelogd. Bekijk je lootje (na 1× inloggen door iedereen) en vul verlanglijstjes in.</p>
+    <div class="controls">
+      <span class="pill" id="loginStatus">Controleren…</span>
+      <button class="btn-alt" id="logout">Uitloggen</button>
+    </div>
+    <div class="footnote" id="fixedInfoTop"></div>
+  </div>
+
+  <div class="card">
+    <h2>Mijn lootje</h2>
+    <p class="muted">Pas zichtbaar als <strong>iedereen</strong> minstens 1× inlogde.</p>
+    <div class="controls">
+      <button class="btn-alt" id="reveal" disabled>Toon mijn lootje</button>
+      <span id="myMatch" class="inline-result hidden"></span>
+    </div>
+    <div id="allStatus" class="progress hidden"></div>
+  </div>
+
+  <div class="card">
+    <h2>Mijn verlanglijstje</h2>
+    <label>Item</label>
+    <input id="itemTitle" type="text" placeholder="Wat wil je?">
+    <label>Link (optioneel)</label>
+    <input id="itemUrl" type="text" placeholder="https://...">
+    <label>Notitie (optioneel)</label>
+    <textarea id="itemNote" placeholder="Maat, kleur, voorkeur…"></textarea>
+    <div class="controls">
+      <button class="btn" id="addItem">Toevoegen</button>
+    </div>
+    <div id="myItems" class="col"></div>
+  </div>
+
+  <div class="card">
+    <h2>Alle verlanglijstjes</h2>
+    <div id="allLists" class="col"></div>
+  </div>
+
+  <div class="footnote" id="fixedInfoBottom"></div>
+</div>
+
+<script type="module">
+  /* Vaste instellingen */
+  const EVENT_ID = 'sinty-2025';
+  const TREKCODE = 'hausverlorenenbewilderd';
+  const PARTICIPANTS = ['Dieta','Robert','Saskia S','Saskia H','Mark','Joshua','Jerome','Denise','Zoë'];
+
+  /* Firebase */
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
+  import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js";
+  import {
+    getFirestore, doc, setDoc, getDoc, collection, addDoc, query, orderBy,
+    getDocs, onSnapshot, serverTimestamp, deleteDoc
+  } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyDM4bGzvdMlNyr7GCTbHLEo96UJFTCYN4Y",
+    authDomain: "sinterklaas-c9f01.firebaseapp.com",
+    projectId: "sinterklaas-c9f01",
+    storageBucket: "sinterklaas-c9f01.firebasestorage.app",
+    messagingSenderId: "305941838481",
+    appId: "1:305941838481:web:c5bde196d9cdda6dad5d30",
+    measurementId: "G-N4Q2C0RQNK"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const db   = getFirestore(app);
+
+  /* Helpers */
+  const $enc = new TextEncoder();
+  const toast = m => alert(m);
+  function xmur3(str){ let h=1779033703 ^ str.length; for(let i=0;i<str.length;i++){ h=Math.imul(h ^ str.charCodeAt(i),3432918353); h=(h<<13)|(h>>>19);} return function(){ h=Math.imul(h ^ (h>>>16),2246822507); h=Math.imul(h ^ (h>>>13),3266489909); return (h^=h>>>16)>>>0;};}
+  function sfc32(a,b,c,d){ return function(){ a>>>==0;b>>>==0;c>>>==0;d>>>==0; let t=(a+b)|0; a=b^(b>>>9); b=(c+(c<<3))|0; c=(c<<21)|(c>>>11); c=(c+t)|0; d=(d+1)|0; t=(t+d)|0; return (t>>>0)/4294967296;};}
+  function rng(seed){ const g=xmur3(seed); return sfc32(g(),g(),g(),g()); }
+  function shuffle(a, r){ const x=a.slice(); for(let i=x.length-1;i>0;i--){ const j=Math.floor(r()*(i+1)); [x[i],x[j]]=[x[j],x[i]];} return x; }
+  function assignDeterministic(names, seed){
+    const r=rng(seed), receivers=names.slice(), used=new Set(), asg=new Map();
+    const givers = names.slice().sort((a,b)=>a.localeCompare(b,'nl',{sensitivity:'base'}));
+    function options(g){ return receivers.filter(rv=>!used.has(rv) && rv!==g); }
+    function bt(i){ if(i===givers.length) return true; const g=givers[i]; const opts=shuffle(options(g), r);
+      for(const rv of opts){ used.add(rv); asg.set(g,rv); if(bt(i+1)) return true; used.delete(rv); asg.delete(g); } return false; }
+    return bt(0)?asg:null;
+  }
+
+  /* UI refs */
+  const loginStatus = document.getElementById('loginStatus');
+  const logoutBtn   = document.getElementById('logout');
+  const revealBtn   = document.getElementById('reveal');
+  const myMatchEl   = document.getElementById('myMatch');
+  const allStatus   = document.getElementById('allStatus');
+  const fixedInfoTop= document.getElementById('fixedInfoTop');
+  const fixedInfoBottom= document.getElementById('fixedInfoBottom');
+  const myItemsEl   = document.getElementById('myItems');
+  const allListsEl  = document.getElementById('allLists');
+
+  fixedInfoTop.textContent = `Event-ID: ${EVENT_ID} · Trekcode: ${TREKCODE}`;
+  fixedInfoBottom.textContent = `Event-ID: ${EVENT_ID} · Trekcode: ${TREKCODE}`;
+
+  let currentName = localStorage.getItem('sinty_currentName') || null;
+
+  // Auth guard
+  onAuthStateChanged(auth, (u)=>{
+    if(!u){
+      window.location.href = 'index.html';
+      return;
+    }
+    loginStatus.textContent = `Ingelogd — uid ${u.uid.slice(0,6)}…${currentName ? ' — '+currentName : ''}`;
+  });
+
+  logoutBtn.addEventListener('click', async ()=>{
+    try{
+      await signOut(auth);
+    }finally{
+      localStorage.removeItem('sinty_currentName');
+      window.location.href = 'index.html';
+    }
+  });
+
+  /* Iedereen 1× ingelogd */
+  async function computeAllLoggedOnce(){
+    const qs=await getDocs(collection(db,'events',EVENT_ID,'participants'));
+    const map=new Map(); PARTICIPANTS.forEach(n=>map.set(n,false));
+    qs.forEach(d=>{ if(map.has(d.id)){ const dat=d.data(); if(dat.hasLoggedIn===true) map.set(d.id,true); }});
+    const total=PARTICIPANTS.length, done=[...map.values()].filter(Boolean).length;
+    return {done,total,all:done===total};
+  }
+  async function updateAllBadge(){
+    const {done,total,all}=await computeAllLoggedOnce();
+    if(all){ allStatus.classList.add('hidden'); revealBtn.disabled = !currentName; }
+    else{ allStatus.textContent = `Wachten op familie: ${done}/${total} heeft 1× ingelogd`; allStatus.classList.remove('hidden'); revealBtn.disabled = true; }
+  }
+  onSnapshot(collection(db,'events',EVENT_ID,'participants'), updateAllBadge);
+  updateAllBadge();
+
+  /* Lootje tonen */
+  document.getElementById('reveal').addEventListener('click', async ()=>{
+    if(!currentName) return toast('Je naam ontbreekt — log opnieuw in a.u.b.');
+    const {all}=await computeAllLoggedOnce();
+    if(!all) return toast('Nog niet iedereen heeft 1× ingelogd.');
+
+    const names = PARTICIPANTS.slice().sort((a,b)=>a.localeCompare(b,'nl',{sensitivity:'base'}));
+    const seed  = JSON.stringify({ TREKCODE, names });
+    const asg   = assignDeterministic(names, 'sinterlootjes:'+seed);
+    const target= asg.get(currentName);
+    myMatchEl.textContent = `Jij koopt voor: ${target} 🎁`;
+    myMatchEl.classList.remove('hidden');
+  });
+
+  /* Verlanglijstjes */
+  function itemRow(owner,id,data,purchased){
+    const div=document.createElement('div'); div.className='item';
+    const left=document.createElement('div'); left.className='col';
+    if(data.url){ const a=document.createElement('a'); a.href=data.url; a.target='_blank'; a.textContent=data.title||'(zonder titel)'; a.className='inline'; left.appendChild(a); }
+    else { const t=document.createElement('div'); t.textContent=data.title||'(zonder titel)'; left.appendChild(t); }
+    if(data.note){ const s=document.createElement('div'); s.className='muted'; s.textContent=data.note; left.appendChild(s); }
+    const right=document.createElement('div'); right.style.display='flex'; right.style.gap='8px';
+
+    if(owner===currentName){
+      const del=document.createElement('button'); del.className='btn-alt'; del.textContent='Verwijderen';
+      del.onclick=async()=>{ await deleteDoc(doc(db,'events',EVENT_ID,'wishlists',owner,'items',id)); };
+      right.appendChild(del);
+    }else{
+      const btn=document.createElement('button'); btn.className='btn'; btn.textContent = purchased ? 'Gekocht (ongedaan maken)' : 'Ik koop dit';
+      btn.onclick=async()=>{
+        const pRef=doc(db,'events',EVENT_ID,'wishlists',owner,'purchases',id);
+        if(purchased) await deleteDoc(pRef);
+        else await setDoc(pRef,{ buyerUid: auth.currentUser.uid, buyerName: currentName||'—', at: serverTimestamp() });
+      };
+      right.appendChild(btn);
+    }
+    div.appendChild(left); div.appendChild(right);
+    return div;
+  }
+
+  document.getElementById('addItem').addEventListener('click', async ()=>{
+    try {
+      if(!currentName) return toast('Je naam ontbreekt — log opnieuw in a.u.b.');
+      const title=document.getElementById('itemTitle').value.trim();
+      const url=document.getElementById('itemUrl').value.trim();
+      const note=document.getElementById('itemNote').value.trim();
+      if(!title) return toast('Geef een titel.');
+
+      await addDoc(collection(db,'events',EVENT_ID,'wishlists',currentName,'items'), {
+        title, url:url||null, note:note||null, createdAt: serverTimestamp()
+      });
+
+      document.getElementById('itemTitle').value='';
+      document.getElementById('itemUrl').value='';
+      document.getElementById('itemNote').value='';
+    } catch (e) {
+      console.error(e);
+      toast('Kon item niet toevoegen: ' + (e.message || e));
+    }
+  });
+
+  function startMyListListener(){
+    if(!currentName) { myItemsEl.innerHTML=''; return; }
+    const qItems=query(collection(db,'events',EVENT_ID,'wishlists',currentName,'items'), orderBy('createdAt','asc'));
+    onSnapshot(qItems,(snap)=>{
+      myItemsEl.innerHTML='';
+      snap.forEach(d=>{ myItemsEl.appendChild(itemRow(currentName,d.id,d.data(),false)); });
+      if(!snap.size){ myItemsEl.innerHTML='<div class="muted">Nog geen items.</div>'; }
+    });
+  }
+
+  async function refreshAllLists(){
+    allListsEl.innerHTML='';
+    const owners = PARTICIPANTS.slice().sort((a,b)=>a.localeCompare(b,'nl',{sensitivity:'base'}));
+    for(const owner of owners){
+      const wrap=document.createElement('div'); wrap.className='card';
+      const h=document.createElement('h3'); h.textContent=owner; wrap.appendChild(h);
+      const list=document.createElement('div'); list.className='col'; wrap.appendChild(list);
+      allListsEl.appendChild(wrap);
+
+      const qItems=query(collection(db,'events',EVENT_ID,'wishlists',owner,'items'), orderBy('createdAt','asc'));
+      const iSnap=await getDocs(qItems);
+
+      let purchasedIds=new Set();
+      try{
+        const pSnap=await getDocs(collection(db,'events',EVENT_ID,'wishlists',owner,'purchases'));
+        pSnap.forEach(d=>purchasedIds.add(d.id));
+      }catch(e){ purchasedIds=new Set(); } // eigenaar heeft geen leesrechten
+
+      iSnap.forEach(d=>{
+        const isPurchased=purchasedIds.has(d.id);
+        if(owner !== currentName && isPurchased) return; // verberg gekochte items voor anderen
+        list.appendChild(itemRow(owner,d.id,d.data(),isPurchased));
+      });
+
+      if(!list.childElementCount){ const em=document.createElement('div'); em.className='muted'; em.textContent='Geen zichtbare items.'; list.appendChild(em); }
+    }
+  }
+
+  onSnapshot(collection(db,'events',EVENT_ID,'participants'), ()=>{ updateAllBadge(); startMyListListener(); refreshAllLists(); });
+  onSnapshot(collection(db,'events',EVENT_ID,'wishlists'), ()=> refreshAllLists());
+
+  // eerste render
+  startMyListListener(); refreshAllLists();
+</script>
+</body>
+</html>
