--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   .row{display:grid;grid-template-columns:1fr 1fr;gap:12px} @media (max-width:720px){.row{grid-template-columns:1fr}}
   .controls{display:flex;gap:8px;flex-wrap:wrap;margin-top:10px}
   button{border:none;cursor:pointer;padding:10px 12px;border-radius:10px;font-weight:650;box-shadow:0 2px 0 rgba(0,0,0,.07)}
-  .btn{background:var(--brand);color:#fff} .pill{display:inline-flex;align-items:center;gap:6px;border:1px solid #fde68a;color:#92400e;border-radius:999px;padding:6px 10px;font-size:12.5px;background:#fff}
+  .btn{background:var(--brand);color:#fff}
+  .pill{display:inline-flex;align-items:center;gap:6px;border:1px solid #fde68a;color:#92400e;border-radius:999px;padding:6px 10px;font-size:12.5px;background:#fff}
   .footnote{margin-top:8px;font-size:12px;color:#9aa3b2}
 </style>
 </head>
@@ -63,15 +64,18 @@
 <!-- Dropdown vuller (zonder Firebase) -->
 <script>
   window.addEventListener('DOMContentLoaded', function () {
-    const sel = document.getElementById('nameSelect');
+    var sel = document.getElementById('nameSelect');
     if (!sel) return;
-    const names = ['Dieta','Robert','Saskia S','Saskia H','Mark','Joshua','Jerome','Denise','Zoë'];
+    var names = ['Dieta','Robert','Saskia S','Saskia H','Mark','Joshua','Jerome','Denise','Zoë'];
     sel.innerHTML = '';
-    const ph = document.createElement('option');
+    var ph = document.createElement('option');
     ph.value = ''; ph.textContent = '— Kies je naam —'; ph.disabled = true; ph.selected = true;
     sel.appendChild(ph);
-    names.slice().sort((a,b)=>a.localeCompare(b,'nl',{sensitivity:'base'}))
-      .forEach(n => { const opt=document.createElement('option'); opt.value=n; opt.textContent=n; sel.appendChild(opt); });
+    names.slice().sort(function(a,b){ return a.localeCompare(b,'nl',{sensitivity:'base'}) })
+      .forEach(function(n){
+        var opt = document.createElement('option');
+        opt.value = n; opt.textContent = n; sel.appendChild(opt);
+      });
   });
 </script>
 
@@ -155,7 +159,7 @@
       const data=snap.data(); const hash=await hashPass(pw, data.pass_salt);
       if(hash !== data.pass_hash) return toast('Onjuist wachtwoord.');
       await setDoc(pRef, { hasLoggedIn:true, lastLoginAt: serverTimestamp() }, { merge:true });
-      // zorg dat dit apparaat ook rechten heeft
+      // voeg huidig apparaat toe voor schrijfrechten op wishlist
       await updateDoc(pRef, { allowed_uids: arrayUnion(auth.currentUser.uid) });
     }
 
